Add init.php to autoload

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,11 @@
 {
     "name": "hhvm/xhp",
     "require": {
+    },
+    "autoload": {
+        "files": [
+            "src/init.php"
+        ]
     }
 }
 
